--- a/src/styles/books.css
+++ b/src/styles/books.css
@@ -35,7 +35,7 @@
     flex: 1;
     min-width: 250px;
     align-self: center;
-    max-height: 225px;
+    max-height: 200px;
     overflow: auto;
     &::-webkit-scrollbar {
       width: 5px;
@@ -50,7 +50,7 @@
   & img {
     border-radius: 20px;
     width: 250px;
-    height: 250px;
+    height: 200px;
     object-fit: cover;
   }
 }
